@@ -2,6 +2,7 @@ package io.mateu.dtos;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 /**
  * UI increment. Components to be added / replacements / actions to run
@@ -11,12 +12,17 @@ import java.util.List;
  * @param uiFragments List of new UI fragments
  */
 public record UIIncrementDto(
-    List<UICommandDto> commands, List<MessageDto> messages, List<UIFragmentDto> uiFragments) {
+        List<UICommandDto> commands,
+        List<MessageDto> messages,
+        List<UIFragmentDto> uiFragments,
+        Map<String, Object> appData
+) {
 
   public UIIncrementDto {
-    commands = Collections.unmodifiableList(commands);
-    messages = Collections.unmodifiableList(messages);
-    uiFragments = Collections.unmodifiableList(uiFragments);
+    commands = Collections.unmodifiableList(commands !=  null?commands:List.of());
+    messages = Collections.unmodifiableList(messages  != null?messages:List.of());
+    uiFragments = Collections.unmodifiableList(uiFragments != null?uiFragments:List.of());
+    appData = Collections.unmodifiableMap(appData != null?appData:Map.of());
   }
 
   @Override
@@ -33,4 +39,10 @@ public record UIIncrementDto(
   public List<UIFragmentDto> uiFragments() {
     return Collections.unmodifiableList(uiFragments);
   }
+
+  @Override
+  public Map<String, Object> appData() {
+    return Collections.unmodifiableMap(appData);
+  }
+
 }
